fix last tests needing id assertions